# Game-Hacking

./: README.md
Assault Cube/: Source.cpp
DLL Injector/: DLL_Injector.py  README.txt
DLL Injector (C++)/: Injector.cpp  README.md  Test.cpp
Games/Assault Cube/: README.txt
Games/Hitman 3/agent_47/: Cargo.toml
Games/Hitman 3/agent_47/src/: main.rs
Utilities/DLL Injector (Python)/: DLL_Injector.py
